tests/multiubuntu/test-cases/TC_39/TC_39_egress_ingress_before_db_status_check_selector_aggregation.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-4
      group: group-2
  egress:
  - toEndpoints:
    - matchLabels:
        container: ubuntu-2
        group: group-1
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-whthctcuaxhxkqf
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-2
      group: group-1
  ingress:
  - fromEndpoints:
    - matchLabels:
        container: ubuntu-4
        group: group-2
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
---
